--- a/Spancirfest/Spancirfest/Modules/Exhibitor/ExhibitorDashboard/ExhibitorDashboard.storyboard
+++ b/Spancirfest/Spancirfest/Modules/Exhibitor/ExhibitorDashboard/ExhibitorDashboard.storyboard
@@ -30,26 +30,37 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VGF-mV-9Tu">
-                                <rect key="frame" x="0.0" y="88" width="414" height="675"/>
+                                <rect key="frame" x="0.0" y="119" width="414" height="644"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="oA1-b9-Vue">
+                                <rect key="frame" x="0.0" y="88" width="414" height="32"/>
+                                <segments>
+                                    <segment title="Published Events"/>
+                                    <segment title="Approveals"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="pGf-rp-rNI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="VGF-mV-9Tu" firstAttribute="top" secondItem="oA1-b9-Vue" secondAttribute="bottom" id="27A-P2-qwx"/>
                             <constraint firstItem="pGf-rp-rNI" firstAttribute="trailing" secondItem="VGF-mV-9Tu" secondAttribute="trailing" id="CF8-uc-sy6"/>
                             <constraint firstItem="pGf-rp-rNI" firstAttribute="trailing" secondItem="dPB-8l-8IX" secondAttribute="trailing" id="CLA-lP-fKN"/>
+                            <constraint firstItem="oA1-b9-Vue" firstAttribute="leading" secondItem="pGf-rp-rNI" secondAttribute="leading" id="GV2-B1-jk1"/>
                             <constraint firstItem="dPB-8l-8IX" firstAttribute="top" secondItem="VGF-mV-9Tu" secondAttribute="bottom" id="W3Z-Y2-Vwt"/>
                             <constraint firstItem="pGf-rp-rNI" firstAttribute="bottom" secondItem="dPB-8l-8IX" secondAttribute="bottom" id="YWj-C4-xRV"/>
                             <constraint firstItem="dPB-8l-8IX" firstAttribute="leading" secondItem="pGf-rp-rNI" secondAttribute="leading" id="ebP-1U-k0z"/>
+                            <constraint firstItem="oA1-b9-Vue" firstAttribute="top" secondItem="pGf-rp-rNI" secondAttribute="top" id="f5C-8d-VG6"/>
                             <constraint firstItem="VGF-mV-9Tu" firstAttribute="leading" secondItem="pGf-rp-rNI" secondAttribute="leading" id="fX0-Tt-oVU"/>
-                            <constraint firstItem="VGF-mV-9Tu" firstAttribute="top" secondItem="pGf-rp-rNI" secondAttribute="top" id="jBC-ql-4Tj"/>
+                            <constraint firstItem="pGf-rp-rNI" firstAttribute="trailing" secondItem="oA1-b9-Vue" secondAttribute="trailing" id="z1S-7A-7Zo"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Exhibitor" image="dollarsign.circle.fill" catalog="system" id="TPA-dC-Amd"/>
                     <navigationItem key="navigationItem" title="Exhibitor Dashboard" id="FTx-yb-jHg"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="segmentedControl" destination="oA1-b9-Vue" id="W8H-lN-dUT"/>
                         <outlet property="tableView" destination="VGF-mV-9Tu" id="unK-Ip-YK6"/>
                     </connections>
                 </viewController>
